# tf-audit

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
blog/: dev-to-tf-audit.md
tests/: conftest.py  test_best_practices.py  test_cli.py  test_models.py  test_module.py  test_naming.py  test_parser.py  test_security.py
tf_audit/: __init__.py  cli.py  demo.py  models.py  parser.py
tf_audit/analyzers/: best_practices_analyzer.py  module_analyzer.py  naming_analyzer.py  security_analyzer.py
tf_audit/reporters/: export_reporter.py  terminal_reporter.py
